--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,18 @@
 <app-header></app-header>
 <div style="margin:20px auto; width:800px;height:500px">
-<ol-map
-    lat="40.4381311"
-    lon="-3.8196225"
-    zoom="5"
-    width="380px"
-    height="380px"
-    style="float:left;margin-right:40px;">
-    <ol-control control="FullScreen">
-    </ol-control>
-    <ol-control control="ScaleLine">
-    </ol-control>
-    <ol-control control="Zoom">
-    </ol-control>
-    <ol-control control="ZoomToExtend">
-    </ol-control>
-    <ol-control control="OverviewMap">
-    </ol-control>
-    <ol-control control="Zoom">
-    </ol-control>
-</ol-map>
+    <ol-map lat="40.4381311" lon="-3.8196225" zoom="5" width="380px" height="380px"
+        style="float:left;margin-right:40px;">
+        <ol-control control="FullScreen">
+        </ol-control>
+        <ol-control control="ScaleLine">
+        </ol-control>
+        <ol-control control="Zoom">
+        </ol-control>
+        <ol-control control="ZoomToExtend">
+        </ol-control>
+        <ol-control control="OverviewMap">
+        </ol-control>
+    </ol-map>
 </div>
 
 <router-outlet></router-outlet>
